# advent-of-code-2023

./: .gitignore  README.md  pyproject.toml
1/: Untitled.ipynb  solve.py
2/: solve.py
3/: solve.py  test.txt
5/: solve.py
6/: solve.py
days/1/: solve.py
days/10/: output.txt  shrinkput.txt  solve.py
days/11/: expanded.txt  solve.py
days/3/: solve.py
days/4/: solve.py
days/7/: solve.py
days/8/: solve.py
days/9/: solve.py
