[tool.poetry]
name = "advent-of-code-2023"
version = "0.1.0"
description = ""
authors = ["Jesse Wiles <jesse.wiles@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
notebook = "^7.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
